# langchain-clickzetta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  PUBLISHING.md  README.md  README_zh.md
docs/: LANGCHAIN_COMPLIANCE.md  retrievers_comparison.md
libs/clickzetta/: LICENSE  Makefile  README.md  pyproject.toml
libs/clickzetta/docs/: README.md  STORAGE_IMPROVEMENTS.md
libs/clickzetta/docs/api/: engine.md
libs/clickzetta/docs/examples/: basic.md
libs/clickzetta/docs/guides/: installation.md  overview.md  quickstart.md
libs/clickzetta/docs/tutorials/: rag-application.md
libs/clickzetta/examples/: README.md  advanced_rag.py  basic_usage.py  cleanup_example.py  setup_demo_data.py  storage_example.py
libs/clickzetta/langchain_clickzetta/: __init__.py  chat_message_histories.py  engine.py  hybrid_store.py  retrievers.py  sql_chain.py  stores.py  vectorstores.py  volume_store.py
libs/clickzetta/scripts/: README.md
libs/clickzetta/scripts/debug/: debug_doc_syntax.py  debug_exact_syntax.py  debug_manual_create.py  debug_show_tables.py  debug_table_creation.py  debug_vectorstore.py
libs/clickzetta/scripts/integration/: test_real_dashscope_integration.py  test_real_integration.py
libs/clickzetta/tests/: __init__.py  conftest.py  utils.py
libs/clickzetta/tests/integration_tests/: __init__.py  test_file_store_strict_deletion.py  test_hybrid_features.py  test_langchain_official_examples.py  test_langchain_standard_usage.py  test_real_connection.py  test_storage_direct.py  test_volume_commands_execution.py
libs/clickzetta/tests/unit_tests/: test_engine.py  test_langchain_compatibility.py  test_sql_chain.py  test_vectorstores.py  test_volume_validation.py
